apps/base/omni-tools/omni-tools-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: omni-tools-ingressroute
  namespace: omni-tools
  annotations:
    gethomepage.dev/href: "https://omni-tools.lab.mainertoo.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Omni Tools"
    gethomepage.dev/description: "Collection of powerful web-based tools"
    gethomepage.dev/app: omni-tools
    gethomepage.dev/group: "Tools"
    gethomepage.dev/icon: "https://cdn.jsdelivr.net/gh/selfhst/icons/svg/omnitools.svg"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`omni-tools.lab.mainertoo.com`)
      kind: Rule
      middlewares:
        - name: authentik-sso
          namespace: traefik-system
      services:
        - name: omni-tools
          port: 80
          scheme: http
  tls: {}
